src/AIS/AIS_TexturedShape.hxx
@@ -98,8 +98,17 @@ public: //! @name methods to alter texture mapping properties
   //! @endcode
   Standard_EXPORT void UpdateAttributes();
 
-  //! Sets the color
+  //! Sets the color.
   Standard_EXPORT virtual void SetColor (const Quantity_Color& theColor);
+
+  //! Removes settings for the color.
+  Standard_EXPORT virtual void UnsetColor();
+
+  //! Sets the material aspect.
+  Standard_EXPORT virtual void SetMaterial (const Graphic3d_MaterialAspect& theAspect);
+
+  //! Removes settings for material aspect.
+  Standard_EXPORT virtual void UnsetMaterial();
 
   //! Enables texture modulation
   Standard_EXPORT void EnableTextureModulate();
